samples/_failures_safe/1761223756_22a15f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4a16820.c: In function ‘main’:
./samples/SAFE/__tmp_f4a16820.c:169:12: error: expected identifier or ‘(’ at end of input
  169 |     struct Graph
      |            ^~~~~
./samples/SAFE/__tmp_f4a16820.c:169:12: error: expected declaration or statement at end of input
